// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons As a link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <a
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr PrimaryButton-qz78sb-0 cGyyDq"
      href="/"
    >
      Create project
    </a>
  </div>
</div>
`;

exports[`Storyshots Buttons Button 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons DangerButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr DangerButton-sc-1220u5k-0 ehzMsl"
    >
      Delete project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons PrimaryButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr PrimaryButton-qz78sb-0 cGyyDq"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons QuietButton 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr QuietButton-sc-1l5k8i4-0 eAbPwX"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 gfuNnn PrimaryButton-qz78sb-0 hcOEwE"
      disabled=""
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons Set to full width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 bkRlmc PrimaryButton-qz78sb-0 cGyyDq"
    >
      Create project
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons With a selected Icon 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 iVDunr"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="1.14285714em"
        icon="add"
        mr="half"
        viewBox="0 0 24 24"
        width="1.14285714em"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Create project
      <svg
        aria-hidden="true"
        class="Icon-fc7twp-0 ffVnNY"
        color="currentColor"
        fill="currentColor"
        focusable="false"
        height="1.14285714em"
        icon="add"
        ml="half"
        viewBox="0 0 24 24"
        width="1.14285714em"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots Buttons With a selected size 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hSnlTw"
    >
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Create project
    </button>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 bDgRPA"
    >
      Create project
    </button>
  </div>
</div>
`;
